--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,41 +4,41 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:k2cKRGWSCh47zzFnabtNfJlqMidBK2xSwaXNAsf+2Apfqhg8biI+ZGcwUwBIFrQ8UoWm4ghRWXYMlqNjgk9sV2I=,iv:HxBORvsCt2ZIZI+36ozObWXMkQ2NOgUqLLIN0ZiSsME=,tag:iuxbQtrg8VZcTrHpDRvYxA==,type:comment]
-    #ENC[AES256_GCM,data:uZWpcJRdQcwwf803TNPiwx2Bb6yJMTebDp97ti+0B3zq3tYpK1cd+OSETF8=,iv:PAgKbWQtJzTEMvIGOnRHywz2OJTzlyprM3yQ1hs2yD8=,tag:d0E3UwD9ZRg5ob2VafJPLA==,type:comment]
-    VIP: ENC[AES256_GCM,data:VNaw0WW8Uyhs3onCdA==,iv:N3EWKEJHFvriiHLcjcU6j8DXsBgLP9c7kXPC+UHSMHk=,tag:If8FWPotnncbkeSUQUikzQ==,type:str]
-    #ENC[AES256_GCM,data:UH9lUUdFpHDI1Jf+VOewxh3EcIfXm1BbOGt5,iv:mpjqiUjhtZP9k2WR1QO2Kyk8qMeJFnatvzWBsBIj4qc=,tag:yy9Zbjv84hJgTPx7PNvPdQ==,type:comment]
-    #ENC[AES256_GCM,data:MyBY8QFB+bHejTFMQcM/sDjeg+t4wY6HWx7K21HdP4wcyPBo2oZ/unwzEj0Kc8eAdTaNP6mL6WrqJryg1fuQo7ySjJkskNGnxlEyvgLSZNUddC4jE1/cc2s=,iv:z4bHejRSN5dgtv72XitB0aHl1uRMX6DzwFrVnj+cPM0=,tag:8qgL2AnEF9VM0XBxLoPHCg==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:T8SmtxBjDXLxEtxhb8U=,iv:XAcRTL9owlkjqzPHqBP0/7jR8nMUglDOIs0aLhYtkQM=,tag:Du97tOpnyoEpG8zR7Vm9+w==,type:str]
-    #ENC[AES256_GCM,data:o79BmCSemBUwk3yw0LaoAKiX6Y3ejGnMr9d11O8lljODoQ==,iv:FwwVEqaI7Gtq2VWQPmD4VIltfQrmnEJgyykOYYQTs+Q=,tag:wztaR4KAGRV4UO+uSuOhKA==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:Ish4pbdq6my0VNHT8A==,iv:wRS8Q9c7oMaXIloHWTF0a/MAbUChw4q4vJ2Fc8irE5c=,tag:BSDxHi4A77urjl3zaNd/WQ==,type:str]
-    #ENC[AES256_GCM,data:p0CHsW5u6toIhZuLJSymntrs1qtgfteBYhQ0/X9byjt/wyzuu4O1YrGY/vZXzkc=,iv:OfmQ6XQ4SSxltxxZUyMGuzsiuGcrcI6WQbt2FM2rmfc=,tag:D5nEZZjpCKA5Q6KIl5bAIA==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:fLOSR7x4ZC1ObZS5pVccsSu8oxXWXhaakqCCsho62A==,iv:AYu2HQTnUVfDKfxx1rGQnkPPkaRm1WpwMaZBC1SXAFI=,tag:r50Eze+ddsjLuGk/V3k3yw==,type:str]
-    #ENC[AES256_GCM,data:mTuPb0Fq5PoeaXEHrtSO31MTQT9BLlKe9zNCQoLmO2WRu48BF2yb5pqLwFb2A7dRdy67IzkHoz63aib8LivrU1/irLEoNHuGBCpQ695sJOAZsA==,iv:GhuGxgSl8mLG/sW618+2SJPm8SJMnlYBk9Uo9vgAycQ=,tag:/8hCKrOmb/f/qOe/NBs9kw==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:l1BLY00LVzVfRuSPRjsg,iv:q48Iv5LXqIwGz27ZDGos64NCfV+cUVJx4wp6KLdixno=,tag:i6zBcLjie5qSIvEYZW2MUw==,type:str]
-    #ENC[AES256_GCM,data:+0Qn2zehCZ6YZK2EHrVMpP7DNEmopwYzL/miSm3namc5,iv:j5LvEvaEjsGmacCwu1s5wu6+ufReMbga7j9HN1QBIro=,tag:eURbN+2S47Mx24xgaCPbGw==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:2HGWoaG9Vkr/7OC2iKZ4,iv:tNpfqOIjG0HTmSJpWOMO5NbaAex/Y+HQdMm9J42bAxE=,tag:xHMLwcSMVWo1ueTctLS4vw==,type:str]
-    #ENC[AES256_GCM,data:IyGzC8Na2Bw3dQExP38sBgX1NLZZ1j7CJDEUiQRSo4wVwRUPH92H7NlBlypwd2E2oWnEW7Ugmcd97ueJsNbGoCsOLA6ZD6GhmYYWanp/Pzc=,iv:bgiRQTexbHeWsDTu5/J2bFs4iDUw4XRuysWQ5EVq7AA=,tag:tYWpYT2iVIm8DLRTB7mU+g==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:AsLTisl3/BH6WlbbdVIL,iv:0QycuPZc0DxjMCkyF6nwe7DH2BFQXYaBSlrgUe224Vo=,tag:5Nwe2LXLbd3VQ5eEPjj1Gw==,type:str]
-    #ENC[AES256_GCM,data:L4a7JxTH2UACYVIzHmTI2WzKEUkW9JjiATWNbKF2Id9gu6mGjQMfuz3ju7ONXTwbHYVDMDLeJdVuXcJk+GG0dL2lmd6EoT71Ha+7+x6suRS0XUEgl06R,iv:LXxhXWUxB3YYn/3VUi+9NGXfw9cWHEXzvTsiw8xrwN8=,tag:9c5Lbk8BjkaZsyD5Nq/R+A==,type:comment]
-    #ENC[AES256_GCM,data:O8gC/ndvqor/UU4R9np9pQ+KXakUdU28J3pMjthVth/AMQA2IkHwC3D4f0ElIeMKA+ehV/uCV+eymnXk9Xv4L53kjWRNTY6NGIH8MaUImi4D4Lh2o5YDlrQ8oXVY2mDW2/hpPQTyOmE9+dqvAR52aCLtIfypwk/rL1MNug==,iv:6VBZFKaXzmXCB2FOTkiIG02tCMVgiWh4JsLtwXao3Og=,tag:iHlLnllQ/21aiPBgnVvb6g==,type:comment]
-    #ENC[AES256_GCM,data:4yKrpWhEHfUqXkVj2TAqKndCPBnj12Jyo+MEQP+R2ox8WLZsDgjNtZXlB+gGLoY1FDWnUS9n0Haygbj2TuKsONRyaMtpzjENSeWMG/dPgI4=,iv:ybUCNxJ6XN5VFJPKMBBWG6v6G2IvrZKLHrcSaYNN9Gg=,tag:iz83UTbI+Rvj3RNHpZOV7g==,type:comment]
-    #ENC[AES256_GCM,data:w6uCLk2PlzZB89QsEtOyC9bIPZtEH8vjOKZzDOEGHWJ2sXSRQUE9/OErQpeFs3IvMSu4sEcx,iv:USA1wlb05ob4T86RjERqlU53DRmz0h6dWMpRppwyXKM=,tag:ctm7ujnrvLetIfgZaJJFyQ==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:Df6oIqqvmzJjVBok,iv:N5184Urj94IS7ZduRDCy8ranq+1ClfQT21P1Ynh76s0=,tag:jaMeb868RISipLWaIaEwng==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:XKdJ5qNtXIUtp89v83dfoDo=,iv:6GqKuvawVjke8ILOQH3ZwuQWWy9AR8Xq8L+bcNv4+Vw=,tag:MnrkeKdUqJoQs8LiOnpVzg==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:QpQ+itNSW3Ial8OqWmF/zYq8nIff4yPt4LrOLNRdIU0zzBvKjjjVOg==,iv:vnCeNyPwsEInkPRhX7dN/FMPdiPl9BqwVtKmz2eoLnk=,tag:kDZpZzDB3ajVA2e5KTI7oQ==,type:str]
-    #ENC[AES256_GCM,data:cwUjEmzWpKq1qdddzfsiWN8rVtfxvg5DJIEQOJvPO8ZbpHCclPELTdOJEUQazejh90ngj0SMkrc=,iv:drMg5Eqqo93PjO5VO/5HvpCml3W00skTbl9fhux0sVc=,tag:+GIzN8rALGBAAl1tpLQmbw==,type:comment]
-    #ENC[AES256_GCM,data:hbIjg/B91TK9nAGHBjNFTtIrviCHd9Ze0Q==,iv:gH3b1CTZ6jEtsno+E+5jYg/omMbQENP4WAaHXQEJMNE=,tag:PlguStGEAQ9T95KKg8fipQ==,type:comment]
-    #ENC[AES256_GCM,data:V5lOeQKxkQ0LKh5rkd34FOdBaagNpFfC0YCX6vv/8D05TKQ+7bhZf7zwHSqxRUJgDaIL1G4R1zXSPRhaXnc2wcowDyMOc2p9IrPLT88=,iv:BfHLM6beZd7IwDvPOjN8TAVM7gn6VvUpb7lfitoZ9Pc=,tag:F4advPO/q8XQ+K/4aMcXcA==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:7IfV/Ky15AUfjvNnpiCaQkfjUnvX0+6tnxRlo8UaGQHCbveMbI8MeMq2PTBsxkZR,iv:ujB9av2wkqWWvmJZiBHpqmSGs5wwjbm8ApS31ZQJ6E4=,tag:VUGBaHdANb0psClqeVrTCQ==,type:str]
-    #ENC[AES256_GCM,data:OIzS00+USZg9mdvu9R0UEwYj5mnzdg/b6y9CsTXuX2w8vrwJlptPZAElJbp0+m1f3BStR5+iTgx0moMZtCXw2oLKtC1Z22A=,iv:0gvCdd9OFwHv6UWpubOmI1uvt77nVqesg50fELqmXv0=,tag:lHJnBTFEbkFYVPvQkLVtXg==,type:comment]
-    #ENC[AES256_GCM,data:T1Gu5lDI62ZtV5e7KOH3y4e3AyAYDuLDAAAVID2NHmgrm8kqxXSZQRaI31nA7wdGSLXBwtnm,iv:LAaYGz0wPDoH4EB+4h8qNSi+WoLQoUW7Hhqu42GxR0c=,tag:NInzTNsWSfa/NOQpFqdpxQ==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:OQv5idP0qg==,iv:N3zFBY8q8aq+0LeI4/qOpFhaBjKeogCwTmxVmvEASvY=,tag:rcZELe2/CtOFoTEMAKaWZg==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:RA8Uf3WfbYJpEjIscmpWHzZxHrU=,iv:UEWIqkmlrWN2/821VPW0Y5hCo+sxw8kjaKNyL2jaJ1k=,tag:E0/9V4UmfjhYs9XKi7ylnA==,type:str]
-    #ENC[AES256_GCM,data:y5j/JXpHmnE4VithsVU=,iv:wiHNK2BWuMJSfjekx5rhJm8o4MptI34xE8COgyDW6CA=,tag:zPUyEnFDOIYDmqsVkKnA8Q==,type:comment]
-    PODNET: ENC[AES256_GCM,data:nIYEPZnT04hvzLIdlg==,iv:taVOSSm9zgD8+0YS/qJ3rUgDIhn6y0nOuvsdT7TZnxk=,tag:jCwj1tDhJbMcTEO7wS0mOg==,type:str]
-    SVCNET: ENC[AES256_GCM,data:MP/AAfxC6Jx/ukUrEg==,iv:5Tj16l+tBqn7JntbmGe0DF/9gPCHlGiJmkoMT/SI3D4=,tag:xzXE+c2Kv6Ds9DUx6sezKg==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:Xnc4CA==,iv:Ta/evOFvp8N8rGx8/3qmtEu6wiKYN+Dd21A9pDjoFMU=,tag:9q8YO4iVv/+a6rPyGOXChg==,type:str]
+    #ENC[AES256_GCM,data:/xMDQ/PZkq0FC2aXhfptvWmmbN2E/zKlH9SJx5Oub/Q8Lqb0TaE7iqTFxdBh9Le2bU07J2MA1DslSpe1zojy/KA=,iv:mzbqHcwKJq/FdzppkKOh0ebdcffegTfmMr0rg1x53go=,tag:3eah2Xt85JLBI0sK9igAmw==,type:comment]
+    #ENC[AES256_GCM,data:1IIWUBUC5Q4O2P1LyYUyDpU1dF8NdmvdTrSGc4KaFsDw/ULMbJ0bFvqgogI=,iv:MTP12yLe1uvURFXgybVbROW56Ov4/yPbDKvbrCfBz5I=,tag:oMJjehBxkwten9RnOTRWPA==,type:comment]
+    VIP: ENC[AES256_GCM,data:AET/FFn4Minig1pJzQ==,iv:No1fgicMTnSVnn5ixlJ3Tq0TUAtgkihBH9ExAeMN9ug=,tag:4gVapgTLhxFM2y1dP+qRsg==,type:str]
+    #ENC[AES256_GCM,data:qquAlRxxWq7Shfz+AZaqfuE1mYoZXdADZpSg,iv:EP8ZTMGhUq4aEE3tDYmYuOQw0iQ1fTsQZaMRW+KCjQc=,tag:vZQtFnni3KOGF/hJZh3HqA==,type:comment]
+    #ENC[AES256_GCM,data:A5qnXCk5t0nf+z+KmyRKxnBDDO0hwTCglwbZME9i5poPKA8gpcdu/0b+Yx8ejaBCqWt11L+8XHQTIVBqale9Qbob/V85aq6/yFOurm2rVePdicipAwkI9Bk=,iv:nnlOopn9nc1WcOU4CW3ctyIGJ+0GzbV1bfk1kpN+/UA=,tag:iJVQBNBrK5fLZq1Uu0F2cQ==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:GSgL7WiGo+V+XeGm+D4=,iv:H+69T1Uded/8d4jwgHIGSfwLDYHyu5Zl0CdhYV5iOX8=,tag:T0TjTv8NeAE2HyCP9VD/lA==,type:str]
+    #ENC[AES256_GCM,data:c51prlvF5NrUGl2OHCv+gR4gOo+BnNqv/Rr/Dcc5BNuDfg==,iv:KqEWO9m0RXjC+GOnKOM4AmPWpiF41bgBmivdY4evhu8=,tag:fy4mbi0A0uN4DxW2GdDlJA==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:wkDsB2QQRwFVG3ShkQ==,iv:uAn2mRjZQ+/0H/fawR32puBEE/Ir2FygKtsk2fuT+rI=,tag:MxRNIMh/O1dlH54m9AGH3Q==,type:str]
+    #ENC[AES256_GCM,data:Gh9O9SHORLlkApt+3XidpiwAJ9aojYDDBc9WGrdzfRq6FBbYO3ZQnqnx/xu70WQ=,iv:Ib9hThMgkTmS//9uV/tl3sowhE5vSc3ITrowHx1xmg4=,tag:dGKlXuXg9KWKH5d1oo818Q==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:HO+VbY8hYvfHk/1s5dIyd9S4dmK4k5OsgWVrpUQlGw==,iv:DFMOU1sxwnccV09mx8bwchcOinbIBYshQ9xvPJ2xOeA=,tag:eFboKRcvB+P15JNlWyNr7w==,type:str]
+    #ENC[AES256_GCM,data:Z8DTx2iUTN+MtXPCZBIYKMLbvfmITUYWTZ8G0Hg49Dsrlacmvtwd/UO8Vv+5zqpV9MddbwSDStcGTr1bVRTA+CiY+7uU7A2A5OPcHAtBDnsvSw==,iv:+tN3sbTBjpWyBSijKd6qWc/VIjv7co/5/ki2PwjUFqk=,tag:VXfTzIhVm3uTKSLPLKjZRA==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:Fnaehi9Gp6/NqIQ3GO0Q,iv:LapPANXoKy4vOE1nLM7aRvO0jIiafCbcASyJFr/sKlc=,tag:SrcLky2ydDej22W5upMLPg==,type:str]
+    #ENC[AES256_GCM,data:L5FhSJZBb1Px5IS8sJtiQP59DJT/+1F0acFsv/UYqQjq,iv:28DpqcCoTvEQch1cJMOAIsCgt80vSGk9nRYmjcKUVZI=,tag:N1fSqa6ak/lksE3FZ88IQA==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:zJ2VPPDlz/sO9heXKn58,iv:qEcjzFUVz8nOttDUjPsCxSLq4f7ZLmzeR51LkpqwNq0=,tag:9GTHQy8jz3aZI/a0ehABoA==,type:str]
+    #ENC[AES256_GCM,data:vGGlGOXQ6R/6WRtGrKOSqP8+e1okK/CJer261SF5yJX7c7fTlyApKMv9cC8ek/UZx+5nud81qr4A/SEdEaQKWt77IEorvxDOwESI8Rl6Pfw=,iv:zguKanjF5UbKYzKq7ZIfmqNPH5dfm6wRDJ7rzqXMoIU=,tag:axMNDJqeID46h8TxjBu+Tw==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:4fC6cTMep8VU3op+Y/cM,iv:835GSgBe96MVET7h91LhykrGxdxVbAQBaiqd1S1KNgs=,tag:EY8YOxreSLS3CNLLwhvnjw==,type:str]
+    #ENC[AES256_GCM,data:d7ushgQDqAZam5/ldCGeB7mZI/BfIO2lMdOwUWT3TqnabOB+bJu2qcaVj+WvjHKRubYNY28yFi0fJLVCn8Y3sk0CbYltxi8viETVb+vlDzpIFPBTGthS,iv:Gt4ez7AIgIarVo+Yur/E3pRW7vlczqtOh5yhB36bA7Y=,tag:e1pppci5yceuIvN4B6WsHQ==,type:comment]
+    #ENC[AES256_GCM,data:wiXQLugoTBmbmTAx1zSulDhpt/h/mSwucU7ELYpg9kNBK7mqzv+HWBWg+f9NhiOsRWZ0TF4smlYAu2RjJV6eoQS9ZzsqHo2+KqRZkEFOO+G+8ri3VtZD78uZUTydSakL9cv0wSgElo9AyR9gTLgDDdDoGL9D8CjGumQVOQ==,iv:LAsRiYa0jmExo1CkzDODt30ts5rhcgZ7kqUSL7+iVRw=,tag:P5iTybxcH+3r9oNOAxdjmw==,type:comment]
+    #ENC[AES256_GCM,data:7SZGE50DCw6XsZ97EkvZcJDVJTV1mWutsfJJ5L/sElMUxj03amqN34Mlw11YkhHuUOqKm+W7QXUZ8MolhGiEEOsQO5Ie3pW3K3VggwQ7tQA=,iv:TFf6Z046bIsbxI5ejZKlmCF9czSD5g6NOMP22ITWvtQ=,tag:gysl81oWO8+ELIb5A3DyPA==,type:comment]
+    #ENC[AES256_GCM,data:NFokcmdaCdUJENmCORx+R6EGQ9MQbaOlJDFZIN+4fyqVOFpk+1qDQZZbqtnkAxii3YAZpPKg,iv:BXQw6bk4JCpLG2SZzvY+deQVALqzGBcUQA7OUYS3jS8=,tag:fevWYPq7pBUKWWLhgfIWuQ==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:0mlqsyqshb3grBIt,iv:fF3e2KCjpc05pYK3vG6MSuBb6WpmGtHnXhUmbtj+N9E=,tag:ttAEjyhCY3LavUmeXYY82A==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:YmNEsbHNddL6xzn6/8KGrFA=,iv:KdD7JM0txxIdqAWO2TeZAHwFPF7DR4zs+IGI+ER20y0=,tag:zhqy3P05CaBmeVy/+bYpAQ==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:2nMHUEh9s5UOZ5rq39BEmsDzg/7pLNa/mojuAo1LzAuFy2XrlmohSg==,iv:8Kj/Lu6uIy910SF7BRKOPdBTN2utxcAPb0SIcDjHE6E=,tag:GC3/GVsxsyln8ui2kZ4KDA==,type:str]
+    #ENC[AES256_GCM,data:oPxizKj8NK9FszIulST7mH8IXYim+SnG5aSOd92e7aasxm/4SCM69KHv3Hg7xBC6YCwzVfkHqHM=,iv:CBZAd2/6IyjJNeXWFftl/7ctv+TwXJ/SUor0KCn6J2g=,tag:C/9PvcSn6qZK73r87zgoNw==,type:comment]
+    #ENC[AES256_GCM,data:NBVRuSZQK/i/sPs+hubK8I/AIhKIp1Wjpw==,iv:Q/Ki7qil6mK5THRjSjVmDH9AsOhzW2fp+i+JfiZTqQM=,tag:o4AKtxS+4Pt/KuXfNuTt8g==,type:comment]
+    #ENC[AES256_GCM,data:K4iauVM02vFGoxHd4PfSdiw4g/Jlks3ulzlVAv9+Mkoix+2DFl4dDQYrHPFjdTK7Kl6rAjr64CEdOYDOR8I9jF00W3nCwOw65QUSuaE=,iv:CsHO6LLS4cagvcxwm+Ur3RmDUfiQ3ECA7+xIJS51Vis=,tag:F4HCy7hJ1MTBjiHPe1hl/w==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:ndsa97i/dgKgZBNIxUqiyU71pR9XWPP0g8JvecT5LcXo0SNp0zy6DQxzcbYHAlzk,iv:qhAQmeG16qJtnQ3g9j34unCM263XJVWh2ae3qKDV8X4=,tag:90WGt7sUYU+ZyvaI2CM5/g==,type:str]
+    #ENC[AES256_GCM,data:nH0bj4FmB3QQm47u+rTKqFc6/HWBwG5aw8LTkSCtpxA7TpXP+R3UfvdExGNxjIoHGGzab47lBW+VqIUMVK9sR5wrQ9Istv0=,iv:H+WpTszA6xFWkVYCgoGUr0U/Y0GCQsBsMJ5PjLBTb6E=,tag:gLXBs2YZHAz1Bf4Z9WmiGg==,type:comment]
+    #ENC[AES256_GCM,data:8V4pACXSQODPHAFAso9z/buCM5PPVBE1Lqp/i/dY/2lG3fFTgASHleumZbTEzbfN7E69eRib,iv:pY/CENUEAnmhpJdPtfRuyGNOUWHxV73x0L1oCmBEt2Y=,tag:z/n8FpLuO2eM4tLPOVQzzw==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:23H1gY4K5g==,iv:NmM7pFCypys0jbWMSyj4CDooZgsfGfyOK6TvODFFAqo=,tag:xOQkfrkoI6tQido5S8jSnw==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:8oz2fJGQxyy9dpbymcKG6YQEL5o=,iv:MwupvJIgSUeAtPnCHzEPQxDrWn1I70gZH/Fle6HIyXc=,tag:uaizhCun9TdLu0RCx4wVfA==,type:str]
+    #ENC[AES256_GCM,data:E/xs8J8k7jKE9botdfI=,iv:+dTTxWs722JzjX2Ch+WEbEUjqk2oA6R2Zd64KQCE50o=,tag:KFub1CaP93zonL0DnpKh2g==,type:comment]
+    PODNET: ENC[AES256_GCM,data:zMs1UMiD25CJyxsE6w==,iv:gaX8weyLD4/LtK3t4b9OUPo3vP55GVoSSX7NnNm2cfc=,tag:ulCm5bc6M8VY5HuU695F3Q==,type:str]
+    SVCNET: ENC[AES256_GCM,data:N+zTxAs92M62G8AYuw==,iv:00A1XJ+MxWSUqdvMhEqjGPZreU+yf41yi/0d87CFlWA=,tag:XjRGp5eSkbxrxUnD8oTc7g==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:mXuAvw==,iv:wQTow/17svc2CtvUo2sw2vIwaQA8X/+cO7W/oPyYHvg=,tag:yJn+5QhIC+HWHmk4qA3z+w==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -49,14 +49,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArSy9SWUxESlhmOTZtVzRa
-            SVZiY0FHdU90WkJOS21zN2VWaG5BRlIwSXlFClZsZUJJTVRSdHRwMEliRUVqZTYr
-            SmowdmNUQTdONkZxbjJMb2ZNbW92bnMKLS0tIHh3YjJLUHBpalN0UFJvT1VSNmEx
-            R0g0amRLZHBDb1JFK3h0SnNvZVBTMGMKmUuDSAi/vJf0UdxHxGmGEBTV2QuSiqCF
-            CqXKM6NpIWkaA110qODPpTbrrLPpHc6VFVhT9DVTxoY3hcYeyX/PAw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTTXJwNzZXeTFiR1kyM3BW
+            cm1CYU56QVRSSE9zV2M2QXpqTnRJZHJBRmhnClNzUGZPZjlHZU9QOENQZ1JBMjRM
+            cHloUldDTlJVUUZJbUJGbkJ6eTdieXMKLS0tIHVRRG9kSDZZcDNhM044QVNIV2Zs
+            TWNVU2Z3MXNpU1phd1FzU3RlQU5MdFkKeS6/fiJ593Xrr1Z79tpakq8SJdYrmTv5
+            ugYoItFKtX9gRYLqOwxp/CXy6sK5zr6ecWbjboKC+o27XyjGl5GSOA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-21T20:48:44Z"
-    mac: ENC[AES256_GCM,data:FrNVZL8HzT2ewCOdjjA78FnCAABGjE5RhmGuYkkZhl1fSL0OGy9qvlpKN4wHjOwAaMzXlDU48De8QzuG+pBTWmAuT2dY2WLWM+BzuDEk7nerd78gXEPkJfQJmajaEHOnOJ4fpkRvuJvizB0GHztgKo4j5Qf2DGIDIrYGskbf8sY=,iv:wm468jTqtKNBtqq5V2q6RpbMSSu5zIhV3WW04G72FlI=,tag:mDp+p1Kzac8vLFQfv1edvg==,type:str]
+    lastmodified: "2024-12-22T18:37:11Z"
+    mac: ENC[AES256_GCM,data:CWVMHHWn7V6vo5o//p8WBU/ud306oHUHT+lwrkLRKRo6o2IDdsWEvhe/fjIRG7Hjz+PDP5K1Fx+JzwKp1k8mGRZDoLQAQfhFAX8HgK2kd2LAL8fla/bmfgtFTbWYeoXrpg1z/hR5BbffFCDVII2F8FSM891yOWytMQyhQ9TY5No=,iv:skiMAy1VIkForQvrNGrh0N5kg0Sj7QRN4QzedSJr/bg=,tag:e2DKCScu7j5UMgVnVWqEbw==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
